# CPPlang-Calculator

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: windows.yml
docs/uml/: architecture.puml  domain.puml  sequence.puml
src/: CMakeLists.txt  main.cpp
src/app/: CalculatorController.cpp  CalculatorController.h
src/domain/: CalculatorEvent.h  CalculatorLogic.h  CalculatorState.h
src/ui/: ICalculatorUI.h  QtCalculatorUI.cpp  QtCalculatorUI.h
test/: CalculatorLogicTest.cpp
